updated links to login and register buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
     </div>
 
     <div class="signIn">
-      <p class="login">Log In</p>
-      <p class="signup">Sign Up</p>
+      <a href="{{url_for('login')}}" class="login">Log In</a>
+      <a href="{{url_for('register')}}" class="signup">Sign Up</a>
     </div>
 
     <div class="container">
