Updated .ico and README.md from stackedit.io

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>To-Do List App</title>
+      <title>僕のTo-Do List App</title>
+      <link rel="icon" href="../static/icons/LOGO.ico" type="image/x-icon">
       <link rel="stylesheet" href="../static/styles.css">
       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
@@ -12,7 +13,7 @@
     <div class="header">
       <div class="title">
         <img src="../static/icons/LOGO.png" alt="TDL" class="logo">
-        <h1 class="nameof"><a href="#" class="anameof">To-Do List</a></h1>
+        <h1 class="nameof"><a href="#" class="anameof">僕のTo-Do List</a></h1>
         <h4 class="demo">*This is a demo live session of our app, Log in to save your tasks</h4>
       </div>
       <div class="signIn">
