modules not found

--- a/templates/login.html
+++ b/templates/login.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Login Page</h1>
+        <a href="{{url_for('register')}}" class="signup">Don't have an account? Sign Up</a>
     </body>
 </html>
