--- a/templates/register.html
+++ b/templates/register.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Register Page</h1>
+        <a href="{{url_for('login')}}" class="login">Already have an account? Log In</a>
     </body>
 </html>
