User Auth done (without css): Next attempt- to sync tasks with database

--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,14 @@
     </head>
     <body>
         <h1>Login Page</h1>
+
+        <form action="" method="POST" class="loginForm">
+            {{ form.hidden_tag() }}
+            {{ form.username }}
+            {{ form.password }}
+            {{ form.submit }}
+        </form>
+
         <a href="{{url_for('register')}}" class="signup">Don't have an account? Sign Up</a>
     </body>
 </html>
