Dashboard internal server error, but Log In, Sign Up designs done

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -30,6 +30,6 @@
         <ul id="task-list"></ul>
     </div>
 
-    <script src="../static/script.js"></script>
+    <script src="../static/dash.js"></script>
   </body>
 </html>
