To-Do-List v2 : EVERYTHING WORKS !

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,7 +14,7 @@
       <div class="title">
         <img src="../static/icons/LOGO.png" alt="TDL" class="logo">
         <h1 class="nameof"><a href="./index.html" class="anameof">僕のTo-Do List</a></h1>
-        <h4 class="demo">You have successfully logged in | Your tasks have been saved</h4>
+        <h4 class="demo">You have successfully logged in | Add tasks to save them</h4>
       </div>
       <div class="signIn">
         <!-- <a href="{{url_for('login')}}" class="login">Log In</a> -->
